# embedit

./: .drone.yml  Cargo.toml  Dockerfile  page.html  video-embed.html  wrapper.html
src/: lib.rs  main.rs
