[package]
name = "embedit"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"
description = "A tool for creating oEmbed cards for ( currently just ) videos."

[dependencies]
lazy-static-include = "2.2.2"
warp = "0.2.3"
tokio = { version = "0.2.21", features = ["macros"] }
serde = { version = "1.0.111", features = ["derive"] }
lazy_static = "1.4.0"
serde_json = "1.0.53"
